--- a/module5.html
+++ b/module5.html
@@ -8,16 +8,11 @@
   <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="dark-theme">
-  <header class="glass header-slide-in compact-header">
+  <header>
     <div class="nav-container">
-      <h1 class="logo">
+      <div class="logo-group" style="display:flex; align-items:center;">
         <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{<></>}</span>
-      </h1>
-      <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <span class="logo-icon">{&lt;/&gt;}</span>
       </div>
       <nav>
         <ul class="nav-menu" id="navMenu">
@@ -28,57 +23,48 @@
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
+      <div class="menu-toggle" id="menuToggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </div>
   </header>
 
   <main class="page-content fade-in">
     <div class="breadcrumb">
-      <a href="index.html">Home</a> <span>></span>
-      <a href="exercises.html">Exercises</a> <span>></span>
+      <a href="index.html">Home</a> <span>&gt;</span>
+      <a href="exercises.html">Exercises</a> <span>&gt;</span>
       <span>Module 5</span>
     </div>
 
     <section class="glass module-lessons">
       <h1>Module 5: Memory Management &amp; Debugging</h1>
-      <p style="margin-bottom:20px;">
-        Learn efficient memory management techniques and effective debugging strategies in C++.
-      </p>
-
-      <button class="btn" style="margin-bottom:10px;" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
+      <p>Learn efficient memory management techniques and effective debugging strategies in C++.</p>
+      <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline">
         <div class="timeline-step">Step 1: Manual Memory Allocation</div>
         <div class="timeline-step">Step 2: Smart Pointers in Depth</div>
         <div class="timeline-step">Step 3: Debugging with Valgrind &amp; GDB</div>
       </div>
-
-      <hr style="border-color:rgba(255,255,255,0.2); margin:20px 0;"/>
-
-      <div style="text-align:center; margin:10px 0;">
+      <hr>
+      <div style="text-align:center; margin:20px 0;">
         <img src="assets/images/module5_diagram.png" alt="Memory Diagram" style="max-width:400px; border-radius:8px;">
-        <p style="font-size:0.9rem; color:#aaa;">
-          <em>Figure: Memory Management (placeholder image).</em>
-        </p>
+        <p style="font-size:0.9rem; color:#aaa;"><em>Figure: Memory Management (placeholder image)</em></p>
       </div>
-
       <h2>Lesson 1: Manual Memory Allocation</h2>
-      <p>
-        Understand dynamic memory allocation using <code>new</code> and <code>delete</code> and how to avoid memory leaks.
-      </p>
-      <ul style="margin-left:20px;">
+      <p>Understand dynamic memory allocation using <code>new</code> and <code>delete</code> and how to avoid memory leaks.</p>
+      <ul>
         <li>Demonstrate manual memory management.</li>
         <li>Discuss pitfalls such as memory leaks and dangling pointers.</li>
       </ul>
       <button class="btn" onclick="openIDE('M5L1')">Open IDE for Lesson 1</button>
-
-      <hr style="border-color:rgba(255,255,255,0.2); margin:20px 20px;"/>
-
+      <hr>
       <h2>Lesson 2: Smart Pointers</h2>
-      <p>
-        Learn how to use <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, and <code>std::weak_ptr</code> for safer memory management.
-      </p>
-      <ul style="margin-left:20px;">
-        <li>Convert manual memory management to smart pointers.</li>
-        <li>Discuss the differences among the various smart pointers.</li>
+      <p>Learn to use <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, and <code>std::weak_ptr</code> for safer memory management.</p>
+      <ul>
+        <li>Convert raw pointer code to smart pointers.</li>
+        <li>Compare different smart pointer types.</li>
       </ul>
       <button class="btn" onclick="openIDE('M5L2')">Open IDE for Lesson 2</button>
     </section>
@@ -87,12 +73,11 @@
   <footer>
     <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
   </footer>
-
+  
   <script src="scripts/main.js"></script>
   <script>
     function toggleTimeline() {
-      const timeline = document.getElementById('moduleTimeline');
-      timeline.classList.toggle('show');
+      document.getElementById('moduleTimeline').classList.toggle('show');
     }
     function openIDE(lessonID) {
       window.location.href = `ide.html?lessonID=${lessonID}`;
