--- a/exercises.html
+++ b/exercises.html
@@ -2,23 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CodeForge++ | Exercises</title>
   <link rel="stylesheet" href="styles/enhanced_styles.css" />
   <link rel="stylesheet" href="styles/animations.css" />
 </head>
-<!-- The theme is applied based on localStorage (default: dark-theme) -->
+<!-- Theme is applied via localStorage -->
 <body class="dark-theme">
-  <header class="glass header-slide-in compact-header">
+  <header>
     <div class="nav-container">
-      <h1 class="logo">
+      <div class="logo-group" style="display:flex; align-items:center;">
         <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{<></>}</span>
-      </h1>
-      <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <span class="logo-icon">{&lt;/&gt;}</span>
       </div>
       <nav>
         <ul class="nav-menu" id="navMenu">
@@ -28,7 +23,11 @@
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
-      <!-- Note: No theme toggle button on non‑index pages -->
+      <div class="menu-toggle" id="menuToggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </div>
   </header>
 
@@ -40,44 +39,44 @@
 
     <div class="course-module glass">
       <h2>Module 1: Foundations &amp; Modern Features</h2>
-      <p>RAII, smart pointers, lambdas, and advanced C++11/14/17 features.</p>
-      <a href="module1.html" class="btn lesson-btn">Go to Module 1</a>
+      <p>RAII, smart pointers, lambdas, and advanced C++ features.</p>
+      <a href="module1.html" class="btn">Go to Module 1</a>
     </div>
 
     <div class="course-module glass">
       <h2>Module 2: Data Structures &amp; Algorithms</h2>
-      <p>Algorithm complexities, searching/sorting, BFS/DFS, and challenging puzzles.</p>
-      <a href="module2.html" class="btn lesson-btn">Go to Module 2</a>
+      <p>Arrays, linked lists, trees, sorting, and searching techniques.</p>
+      <a href="module2.html" class="btn">Go to Module 2</a>
     </div>
 
     <div class="course-module glass">
       <h2>Module 3: Real‑Time &amp; Embedded Systems</h2>
-      <p>RTOS, embedded concurrency, interrupts, and hardware debugging.</p>
-      <a href="module3.html" class="btn lesson-btn">Go to Module 3</a>
+      <p>RTOS fundamentals, embedded concurrency, interrupts, and debugging.</p>
+      <a href="module3.html" class="btn">Go to Module 3</a>
     </div>
 
     <div class="course-module glass">
       <h2>Module 4: Concurrency &amp; Multithreading</h2>
-      <p>Threads, mutexes, lock‑free data structures, and advanced concurrency patterns.</p>
-      <a href="module4.html" class="btn lesson-btn">Go to Module 4</a>
+      <p>Threads, mutexes, lock‑free programming, and concurrency patterns.</p>
+      <a href="module4.html" class="btn">Go to Module 4</a>
     </div>
 
     <div class="course-module glass">
       <h2>Module 5: Memory Management &amp; Debugging</h2>
-      <p>Manual versus smart pointers, custom allocators, and effective debugging with Valgrind/GDB.</p>
-      <a href="module5.html" class="btn lesson-btn">Go to Module 5</a>
+      <p>Manual vs. smart pointers, custom allocators, and effective debugging.</p>
+      <a href="module5.html" class="btn">Go to Module 5</a>
     </div>
 
     <div class="course-module glass">
       <h2>Module 6: Templates &amp; Metaprogramming</h2>
-      <p>SFINAE, type traits, and advanced compile‑time programming techniques.</p>
-      <a href="module6.html" class="btn lesson-btn">Go to Module 6</a>
+      <p>SFINAE, type traits, and compile‑time programming techniques.</p>
+      <a href="module6.html" class="btn">Go to Module 6</a>
     </div>
 
     <div class="course-module glass">
       <h2>Module 7: System Design &amp; Advanced Topics</h2>
-      <p>Design patterns, high‑level architecture, and common interview scenarios.</p>
-      <a href="module7.html" class="btn lesson-btn">Go to Module 7</a>
+      <p>Design patterns, high‑level architecture, and scalable interview scenarios.</p>
+      <a href="module7.html" class="btn">Go to Module 7</a>
     </div>
   </main>
 
