--- a/quiz.html
+++ b/quiz.html
@@ -8,16 +8,11 @@
   <link rel="stylesheet" href="styles/animations.css" />
 </head>
 <body class="dark-theme">
-  <header class="glass header-slide-in compact-header">
+  <header>
     <div class="nav-container">
-      <h1 class="logo">
+      <div class="logo-group" style="display:flex; align-items:center;">
         <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{<></>}</span>
-      </h1>
-      <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <span class="logo-icon">{&lt;/&gt;}</span>
       </div>
       <nav>
         <ul class="nav-menu" id="navMenu">
@@ -28,6 +23,11 @@
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
+      <div class="menu-toggle" id="menuToggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </div>
   </header>
 
@@ -35,17 +35,13 @@
     <section class="glass" style="max-width:800px; margin:0 auto;">
       <h1>Interview Quiz</h1>
       <p id="quiz-intro">Lesson‑based quiz with a timer and local leaderboard!</p>
-
       <div class="quiz-timer" id="quiz-timer">Time: 00:00</div>
       <div id="quiz-container" class="quiz-container"></div>
-
-      <button id="start-quiz" class="btn" style="margin-top:20px;">Start Quiz</button>
+      <button id="start-quiz" class="btn">Start Quiz</button>
       <button id="submit-quiz" class="btn" style="display:none; margin-left:10px;">Submit Quiz</button>
-
-      <div id="quiz-result" style="margin-top:20px; font-weight:bold;"></div>
-
+      <div id="quiz-result" style="margin-top:20px; font-weight:600;"></div>
       <div class="leaderboard" id="leaderboard" style="display:none;">
-        <h2>Local Leaderboard</h2>
+        <h3>Local Leaderboard</h3>
         <div id="leaderboard-entries"></div>
       </div>
     </section>
@@ -54,7 +50,7 @@
   <footer>
     <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
   </footer>
-
+  
   <script src="scripts/main.js"></script>
   <script src="scripts/quiz.js"></script>
 </body>
