--- a/resources.html
+++ b/resources.html
@@ -8,16 +8,11 @@
   <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="dark-theme">
-  <header class="glass header-slide-in compact-header">
+  <header>
     <div class="nav-container">
-      <h1 class="logo">
+      <div class="logo-group" style="display:flex; align-items:center;">
         <span class="logo-text">CodeForge++</span>
-        <span class="logo-icon">{<></>}</span>
-      </h1>
-      <div class="menu-toggle" id="menuToggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <span class="logo-icon">{&lt;/&gt;}</span>
       </div>
       <nav>
         <ul class="nav-menu" id="navMenu">
@@ -27,31 +22,31 @@
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
+      <div class="menu-toggle" id="menuToggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </div>
   </header>
 
   <main class="page-content fade-in resource-section">
     <h1>C++ Learning Resources</h1>
-    <p>
-      Explore curated references, tutorials, and external links to deepen your understanding of modern C++.
-    </p>
-
+    <p>Explore curated references, tutorials, and external links to deepen your understanding of modern C++.</p>
     <div class="resource-list" style="margin-top:30px;">
       <div class="resource-item glass card-hover floating-card">
         <h2>cppreference.com</h2>
         <p>Comprehensive documentation on C++ language features and STL.</p>
         <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit Site</a>
       </div>
-
       <div class="resource-item glass card-hover floating-card">
         <h2>isocpp.org</h2>
-        <p>Official C++ standardization info, guidelines, and articles.</p>
+        <p>Official C++ standardization information and guidelines.</p>
         <a href="https://isocpp.org" target="_blank" class="btn">View Site</a>
       </div>
-
       <div class="resource-item glass card-hover floating-card">
         <h2>Learn C++</h2>
-        <p>Advanced tutorials and resources on modern C++.</p>
+        <p>Advanced tutorials and resources for modern C++.</p>
         <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit Site</a>
       </div>
     </div>
@@ -60,7 +55,7 @@
   <footer>
     <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
   </footer>
-
+  
   <script src="scripts/main.js"></script>
 </body>
 </html>
